Add picture changes when hover to projects in main page

--- a/index.html
+++ b/index.html
@@ -41,30 +41,65 @@
                 <div class="page__projects" id="page__projects">
                     <div class="section-wrapper" >
                         <div class="project__wrapper">
-                            <div class="project__nszu project__content">                                
-                                <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
-                                <!-- <img src="assets/images/projects/01_nszu/front_2.jpg" class="project__photo-hover"> -->                                
-                                <p class="project__text"> National Health Service </p>
+                            <div class="project__nszu project__content">
+                                <div class="project__img">
+                                    <img src="assets/images/projects/01_nszu/front_2.jpg" class="project__photo-hover">
+                                    <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
+                                </div>                                
+                                <div class="project__content-wrapper">
+                                    <img src="assets/images/projects/01_nszu/front_2.jpg" class="project__photo-hiden">
+                                    <p class="project__text"> National Health Service </p>
+                                </div>
                             </div>
                             <div class="project__leleka project__content">
-                                <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
-                                <p class="project__text"> National Health Service </p>
+                                <div class="project__img">
+                                    <img src="assets/images/projects/01_nszu/front_2.jpg" class="project__photo-hover">
+                                    <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
+                                </div>   
+                                <div class="project__content-wrapper">
+                                    <img src="assets/images/projects/01_nszu/front_2.jpg" class="project__photo-hiden">
+                                    <p class="project__text"> National Health Service </p>
+                                </div>
                             </div>
                             <div class="project__aquapark project__content">
-                                <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
-                                <p class="project__text"> National Health Service </p>
+                                <div class="project__img">
+                                    <img src="assets/images/projects/01_nszu/front_2.jpg" class="project__photo-hover">
+                                    <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
+                                </div>  
+                                <div class="project__content-wrapper">
+                                    <img src="assets/images/projects/01_nszu/front_2.jpg" class="project__photo-hiden">
+                                    <p class="project__text"> National Health Service </p>
+                                </div>
                             </div>
                             <div class="project__brovary project__content">
-                                <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
-                                <p class="project__text"> National Health Service </p>
+                                <div class="project__img">
+                                    <img src="assets/images/projects/01_nszu/front_2.jpg" class="project__photo-hover">
+                                    <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
+                                </div>   
+                                <div class="project__content-wrapper">
+                                    <img src="assets/images/projects/01_nszu/front_2.jpg" class="project__photo-hiden">
+                                    <p class="project__text"> National Health Service </p>
+                                </div>
                             </div>
                             <div class="project__nova-kakhovka project__content">
-                                <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
-                                <p class="project__text"> National Health Service </p>
+                                <div class="project__img">
+                                    <img src="assets/images/projects/01_nszu/front_2.jpg" class="project__photo-hover">
+                                    <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
+                                </div> 
+                                <div class="project__content-wrapper">
+                                    <img src="assets/images/projects/01_nszu/front_2.jpg" class="project__photo-hiden">
+                                    <p class="project__text"> National Health Service </p>
+                                </div>
                             </div>
                             <div class="project__zirochka project__content">
-                                <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
-                                <p class="project__text"> National Health Service </p>
+                                <div class="project__img">
+                                    <img src="assets/images/projects/01_nszu/front_2.jpg" class="project__photo-hover">
+                                    <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
+                                </div>    
+                                <div class="project__content-wrapper">
+                                    <img src="assets/images/projects/01_nszu/front_2.jpg" class="project__photo-hiden">
+                                    <p class="project__text"> National Health Service </p>
+                                </div>
                             </div>
                         </div>
                         <div class="project__more-projects more-btn">
