--- a/index.html
+++ b/index.html
@@ -26,7 +26,12 @@
                         <li> <a href="#page__about-us"> About us </a> </li>
                         <li> <a href="#page__contacts"> Contacts </a> </li>
                         <li> <a href="#"> Ua </a> </li>
-                        <li> <a href="https://www.facebook.com/kyriigroup/" target="_blank"><img src="assets/images/projects/00_general/fb-icon.svg" ></a></li>
+                        <li> <a href="https://www.facebook.com/kyriigroup/" target="_blank">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+                                    <path d="M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08 124.72v70.62H22.89V288h81.39v224h100.17V288z"/>
+                                </svg>
+                            </a> 
+                        </li>
                     </ul>
                 </div>
             </div>
