--- a/projects.html
+++ b/projects.html
@@ -42,52 +42,124 @@
                     <div class="section-wrapper" id="project__wrapper">
                         <div class="project__wrapper">
                             <div class="project__nszu project__content">
-                                <img src="assets/images/projects/01_nszu/front_small.jpg" class="project__photo">
-                                <p class="project__text"> National Health Service </p>
+                                <div class="project__img">
+                                    <img src="assets/images/projects/01_nszu/front_2.jpg" class="project__photo-hover">
+                                    <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
+                                </div>                                
+                                <div class="project__content-wrapper">
+                                    <img src="assets/images/projects/01_nszu/front_2.jpg" class="project__photo-hiden">
+                                    <p class="project__text"> National Health Service </p>
+                                </div>
                             </div>
                             <div class="project__leleka project__content">
-                                <img src="assets/images/projects/01_nszu/front_small.jpg" class="project__photo">
-                                <p class="project__text"> National Health Service </p>
+                                <div class="project__img">
+                                    <img src="assets/images/projects/01_nszu/front_2.jpg" class="project__photo-hover">
+                                    <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
+                                </div>                                
+                                <div class="project__content-wrapper">
+                                    <img src="assets/images/projects/01_nszu/front_2.jpg" class="project__photo-hiden">
+                                    <p class="project__text"> National Health Service </p>
+                                </div>
                             </div>
                             <div class="project__aquapark project__content">
-                                <img src="assets/images/projects/01_nszu/front_small.jpg" class="project__photo">
-                                <p class="project__text"> National Health Service </p>
+                                <div class="project__img">
+                                    <img src="assets/images/projects/01_nszu/front_2.jpg" class="project__photo-hover">
+                                    <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
+                                </div>                                
+                                <div class="project__content-wrapper">
+                                    <img src="assets/images/projects/01_nszu/front_2.jpg" class="project__photo-hiden">
+                                    <p class="project__text"> National Health Service </p>
+                                </div>
                             </div>
                             <div class="project__brovary project__content">
-                                <img src="assets/images/projects/01_nszu/front_small.jpg" class="project__photo">
-                                <p class="project__text"> National Health Service </p>
+                                <div class="project__img">
+                                    <img src="assets/images/projects/01_nszu/front_2.jpg" class="project__photo-hover">
+                                    <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
+                                </div>                                
+                                <div class="project__content-wrapper">
+                                    <img src="assets/images/projects/01_nszu/front_2.jpg" class="project__photo-hiden">
+                                    <p class="project__text"> National Health Service </p>
+                                </div>
                             </div>
                             <div class="project__nova-kakhovka project__content">
-                                <img src="assets/images/projects/01_nszu/front_small.jpg" class="project__photo">
-                                <p class="project__text"> National Health Service </p>
+                                <div class="project__img">
+                                    <img src="assets/images/projects/01_nszu/front_2.jpg" class="project__photo-hover">
+                                    <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
+                                </div>                                
+                                <div class="project__content-wrapper">
+                                    <img src="assets/images/projects/01_nszu/front_2.jpg" class="project__photo-hiden">
+                                    <p class="project__text"> National Health Service </p>
+                                </div>
                             </div>
                             <div class="project__zirochka project__content">
-                                <img src="assets/images/projects/01_nszu/front_small.jpg" class="project__photo">
-                                <p class="project__text"> National Health Service </p>
+                                <div class="project__img">
+                                    <img src="assets/images/projects/01_nszu/front_2.jpg" class="project__photo-hover">
+                                    <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
+                                </div>                                
+                                <div class="project__content-wrapper">
+                                    <img src="assets/images/projects/01_nszu/front_2.jpg" class="project__photo-hiden">
+                                    <p class="project__text"> National Health Service </p>
+                                </div>
                             </div>
                             <div class="project__brovary project__content">
-                                <img src="assets/images/projects/01_nszu/front_small.jpg" class="project__photo">
-                                <p class="project__text"> National Health Service </p>
+                                <div class="project__img">
+                                    <img src="assets/images/projects/01_nszu/front_2.jpg" class="project__photo-hover">
+                                    <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
+                                </div>                                
+                                <div class="project__content-wrapper">
+                                    <img src="assets/images/projects/01_nszu/front_2.jpg" class="project__photo-hiden">
+                                    <p class="project__text"> National Health Service </p>
+                                </div>
                             </div>
                             <div class="project__nova-kakhovka project__content">
-                                <img src="assets/images/projects/01_nszu/front_small.jpg" class="project__photo">
-                                <p class="project__text"> National Health Service </p>
+                                <div class="project__img">
+                                    <img src="assets/images/projects/01_nszu/front_2.jpg" class="project__photo-hover">
+                                    <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
+                                </div>                                
+                                <div class="project__content-wrapper">
+                                    <img src="assets/images/projects/01_nszu/front_2.jpg" class="project__photo-hiden">
+                                    <p class="project__text"> National Health Service </p>
+                                </div>
                             </div>
                             <div class="project__zirochka project__content">
-                                <img src="assets/images/projects/01_nszu/front_small.jpg" class="project__photo">
-                                <p class="project__text"> National Health Service </p>
+                                <div class="project__img">
+                                    <img src="assets/images/projects/01_nszu/front_2.jpg" class="project__photo-hover">
+                                    <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
+                                </div>                                
+                                <div class="project__content-wrapper">
+                                    <img src="assets/images/projects/01_nszu/front_2.jpg" class="project__photo-hiden">
+                                    <p class="project__text"> National Health Service </p>
+                                </div>
                             </div>
                             <div class="project__brovary project__content">
-                                <img src="assets/images/projects/01_nszu/front_small.jpg" class="project__photo">
-                                <p class="project__text"> National Health Service </p>
+                                <div class="project__img">
+                                    <img src="assets/images/projects/01_nszu/front_2.jpg" class="project__photo-hover">
+                                    <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
+                                </div>                                
+                                <div class="project__content-wrapper">
+                                    <img src="assets/images/projects/01_nszu/front_2.jpg" class="project__photo-hiden">
+                                    <p class="project__text"> National Health Service </p>
+                                </div>
                             </div>
                             <div class="project__nova-kakhovka project__content">
-                                <img src="assets/images/projects/01_nszu/front_small.jpg" class="project__photo">
-                                <p class="project__text"> National Health Service </p>
+                                <div class="project__img">
+                                    <img src="assets/images/projects/01_nszu/front_2.jpg" class="project__photo-hover">
+                                    <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
+                                </div>                                
+                                <div class="project__content-wrapper">
+                                    <img src="assets/images/projects/01_nszu/front_2.jpg" class="project__photo-hiden">
+                                    <p class="project__text"> National Health Service </p>
+                                </div>
                             </div>
                             <div class="project__zirochka project__content">
-                                <img src="assets/images/projects/01_nszu/front_small.jpg" class="project__photo">
-                                <p class="project__text"> National Health Service </p>
+                                <div class="project__img">
+                                    <img src="assets/images/projects/01_nszu/front_2.jpg" class="project__photo-hover">
+                                    <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
+                                </div>                                
+                                <div class="project__content-wrapper">
+                                    <img src="assets/images/projects/01_nszu/front_2.jpg" class="project__photo-hiden">
+                                    <p class="project__text"> National Health Service </p>
+                                </div>
                             </div>
                         </div>                        
                     </div>
