--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Anna Kyrii</title>
     <link rel="icon" type="image/png" href="assets/images/projects/00_general/logo_new.png">
     <script src="assets/js/snippets_html.js"></script> <!-- Import parts of page HTML -->
+    <script src="assets/js/burger.js"></script> <!-- Import Burger menu -->
 </head>
 <body>
     <main class="page__main">
@@ -21,18 +22,28 @@
                         <a href="index.html" class="header_logo-pic"><img src="assets/images/projects/00_general/logo_black.svg" class="header_logo-pic" alt="Anna Kyrii"></a>
                         <a href="index.html" class="header_name"><h1 class="header_name-text"> Anna Kyrii <br> Architectural <br> Projecting Group</h1></a>
                     </div>
-                    <ul class="header__navigation" >
-                        <li> <a href="#page__projects"> Projects </a> </li>
-                        <li> <a href="#page__about-us"> About us </a> </li>
-                        <li> <a href="#page__contacts"> Contacts </a> </li>
-                        <li> <a href="#"> Ua </a> </li>
-                        <li> <a href="https://www.facebook.com/kyriigroup/" target="_blank">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
-                                    <path d="M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08 124.72v70.62H22.89V288h81.39v224h100.17V288z"/>
-                                </svg>
-                            </a> 
-                        </li>
-                    </ul>
+
+                    <div class="header__menu menu">
+                        <div class="menu__icon">
+                            <span>
+                                
+                            </span>
+                        </div>
+                        <nav class="menu__body">
+                            <ul class="menu__list" >
+                                <li> <a href="#page__projects"> Projects </a> </li>
+                                <li> <a href="#page__about-us"> About us </a> </li>
+                                <li> <a href="#page__contacts"> Contacts </a> </li>
+                                <li> <a href="#"> Ua </a> </li>
+                                <li> <a href="https://www.facebook.com/kyriigroup/" target="_blank">
+                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+                                            <path d="M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08 124.72v70.62H22.89V288h81.39v224h100.17V288z"/>
+                                        </svg>
+                                    </a> 
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
                 </div>
             </div>
         </header>
