Add smooth scroll on a page using JS

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                         </div>
                         <nav class="menu__body">
                             <ul class="menu__list" >
-                                <li> <a href="#page__projects"> Projects </a> </li>
-                                <li> <a href="#page__about-us"> About us </a> </li>
-                                <li> <a href="#page__contacts"> Contacts </a> </li>
+                                <li> <a data-goto=".page__projects" href="#" class="menu__link"> Projects </a> </li>
+                                <li> <a data-goto=".page__about-us" href="#" class="menu__link"> About us </a> </li>
+                                <li> <a data-goto=".page__contacts" href="#" class="menu__link"> Contacts </a> </li>
                                 <li> <a href="#"> Ua </a> </li>
                                 <li> <a href="https://www.facebook.com/kyriigroup/" target="_blank">
                                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
