Underlined nav items when scrolling

--- a/HTML-snippets/contact-form.html
+++ b/HTML-snippets/contact-form.html
@@ -1,4 +1,4 @@
-<div class="page__contacts" id="page__contacts">
+<div class="page__contacts scroll-section" id="page__contacts">
     <div class="section-wrapper contacts">
         <div class="contacts__container">
             <div class="contacts__what-we-do">
