--- a/about_us.html
+++ b/about_us.html
@@ -82,7 +82,7 @@
                         <div class="info__paragraphs">
                             <div class="par-group">
                                 <p class="par"> <span> "Anna Kyrii Architectural and Design Group" company </span> was founded in 2008.</p>
-                                <p class="par">We work as a General Designer and develop for our clients all sections of project documentation without any exception. In our design decisions, we are guided by the principles of modern architecture. We always find and offer the best solution that improves our clients’ business and solve their business tasks.</p>
+                                <p class="par">We work as a General Designer and develop for our clients all sections of project documentation without any exception.</p>
                             </div> 
                             <div class="par-group">
                                 <p class="par"><span>The company specializes </span> in development of the following types of design works:</p>
@@ -92,7 +92,7 @@
                                 <p class="par">- Construction design supervision</p>
                             </div>
                             <div class="par-group">
-                                <p class="par"><span>The number of projects </span> developed by our specialists during the existence of the company includes above 250 projects in the following categories: public buildings and constructions, residential multi-apartment buildings, office buildings and business centers, multifunctional complexes, medical institutions, schools, kindergartens, leisure centers, cottage towns, interiors of public spaces.</p>
+                                <p class="par">The number of projects  developed by our company includes above <span> 250 projects in the following categories: </span> public buildings and constructions, residential multi-apartment buildings, office buildings and business centers, multifunctional complexes, medical institutions, schools, kindergartens, leisure centers, cottage towns, interiors of public spaces.</p>
                             </div>
                             <div class="par-group">
                                 <p class="par"><span>What we don’t do</span></p>
@@ -100,7 +100,7 @@
                             </div>                            
                             <div class="par-group">
                                 <p class="par"><span>Team:</span></p>
-                                <p class="par">All employees who work in the company are talented individuals and high-level specialists in their field. They are architects, structural engineers, designers, and managers. Architects and structural engineers have the appropriate qualification certificates. The company cooperates closely with specialists and organizations of engineering specialties and involves them to participate in the development of project documentation as subcontractors. We are proud that our small team of talented specialists creates and implements large-scale and important projects.</p>
+                                <p class="par">All employees who work in the company are talented individuals and high-level specialists in their field. They are architects, structural engineers, designers, and managers. Architects and structural engineers have the appropriate qualification certificates.</p>
                             </div>
                         </div>
                     </div>
