--- a/contacts.html
+++ b/contacts.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="assets/style/normalize.css">  <!-- add reset style --> 
     <link rel="stylesheet" href="assets/style/style.css">   <!-- main page css -->
     <link rel="stylesheet" href="assets/style/style_projects.css">   <!-- new css -->
+    <link rel="stylesheet" href="assets/style/media.css">   <!-- media queries -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
     <title>Anna Kyrii</title>
     <link rel="icon" type="image/png" href="assets/images/projects/00_general/logo_new.png">
