--- a/HTML-snippets/footer-map.html
+++ b/HTML-snippets/footer-map.html
@@ -7,7 +7,7 @@
             <div class="contacts">
                 <p><a href="https://www.google.com/maps/place/%D0%90%D1%80%D1%85%D0%B8%D1%82%D0%B5%D0%BA%D1%82%D1%83%D1%80%D0%BD%D0%BE-%D0%BF%D1%80%D0%BE%D0%B5%D0%BA%D1%82%D0%BD%D0%B0%D1%8F+%D0%B3%D1%80%D1%83%D0%BF%D0%BF%D0%B0+%D0%90%D0%BD%D0%BD%D1%8B+%D0%9A%D0%B8%D1%80%D0%B8%D0%B9/@50.4484759,30.497488,17z/data=!4m13!1m7!3m6!1s0x40d4cef54bbbd095:0x6af66acf0bb8b5a4!2z0LLRg9C70LjRhtGPINCe0LvQtdGB0Y8g0JPQvtC90YfQsNGA0LAsIDgyLCDQmtC40ZfQsiwgMDIwMDA!3b1!8m2!3d50.4484355!4d30.4971632!3m4!1s0x40d4cef54be8e5cf:0x181e795e2e17cacc!8m2!3d50.4484289!4d30.4973407" class="contacts__details contacts__adress" id="contacts__adress" target="_blank">Of. 2-A, 82, O.Gonchara Str., <br> 01054, Kyiv, Ukraine</a></p>
                 <p ><a href="mailto:in@kyrii-group.com.ua" class="contacts__details contacts__e-mail">in@kyrii-group.com.ua</a></p>
-                <p><a href="tel://38-098-778-9013" class="contacts__details contacts__tel">tel: +38 (044) 486 35 36</a></p>
+                <p><a href="tel:+38-098-778-9013" class="contacts__details contacts__tel">tel: +38 (044) 486 35 36</a></p>
             </div>
             <div class="privacy-policy">
                 <img src="assets/images/projects/00_general/logo_black.svg" class="privacy-policy__logo">
