Check valid e-mail and name in Contact us form

--- a/index.html
+++ b/index.html
@@ -165,5 +165,6 @@
     
     <script>includeHTML()</script> <!-- Import parts of page HTML -->
     <script src="assets/js/burger.js" ></script> <!-- Import Burger menu -->
+    <script src="assets/js/contact-us_form.js" ></script> <!-- Import contact-us form -->
 </body>
 </html>
