--- a/HTML-snippets/contact-form.html
+++ b/HTML-snippets/contact-form.html
@@ -26,22 +26,22 @@
                         <p class="contacts__cotact-us-title"> Contact us </p>
                         <div class="contacts__input-block">
                             <label for="inp-name" class="input-label"> Your Name* </label>
-                            <input id="inp-name" type="text" name="name" class="input-field" required>
+                            <input id="inp-name" type="text" name="name" class="input-field _req _name">
                             <p class="input-error"> Provide a name</p>
                         </div> 
                         <div class="contacts__input-block">
                             <label for="inp-phone" class="input-label"> Your Phone Number* </label>
-                            <input id="inp-phone" type="tel" name="phone" class="input-field" required>
+                            <input id="inp-phone" type="tel" name="phone" class="input-field _req">
                             <p class="input-error"> Provide a phone number</p>
                         </div> 
                         <div class="contacts__input-block">
                             <label for="inp-email" class="input-label"> Your Email Address* </label>
-                            <input id="inp-email" type="email" name="email" class="input-field" required>
-                            <p class="input-error"> Provide an e-mail</p>
+                            <input id="inp-email" type="email" name="email" class="input-field _req _email">
+                            <p class="input-error" id="email-error"> Provide an e-mail</p>
                         </div> 
                         <div class="contacts__input-block">
                             <label for="inp-message" class="input-label"> Your Message* </label>
-                            <textarea id="inp-message" name="message" class="input-field" rows="9" style="height: 144px;"></textarea>  
+                            <textarea id="inp-message" name="message" class="input-field _req" rows="9" style="height: 144px;"></textarea>  
                             <p class="input-error"> Provide a message</p>                     
                         </div> 
                         <button type="submit" class="contacts__submit"> Submit </button>
