Add placeholder in phone input

--- a/HTML-snippets/contact-form.html
+++ b/HTML-snippets/contact-form.html
@@ -31,12 +31,12 @@
                         </div> 
                         <div class="contacts__input-block">
                             <label for="inp-phone" class="input-label"> Your Phone Number* </label>
-                            <input id="inp-phone" type="tel" name="phone" class="input-field _req">
+                            <input id="inp-phone" type="text" name="phone" class="input-field _req" value="+(380)">
                             <p class="input-error"> Provide a phone number</p>
                         </div> 
                         <div class="contacts__input-block">
                             <label for="inp-email" class="input-label"> Your Email Address* </label>
-                            <input id="inp-email" type="email" name="email" class="input-field _req _email">
+                            <input id="inp-email" type="text" name="email" class="input-field _req _email">
                             <p class="input-error" id="email-error"> Provide an e-mail</p>
                         </div> 
                         <div class="contacts__input-block">
