--- a/contacts.html
+++ b/contacts.html
@@ -77,7 +77,8 @@
     </main>
 
     <script>includeHTML()</script> <!-- Import parts of page HTML -->
-    <script src="assets/js/burger.js" ></script> <!-- Import Burger menu -->
     <script src="assets/js/contact-us_form.js" ></script> <!-- Import contact-us form -->
+    <script src="assets/js/burger.js" ></script> <!-- Import Burger menu -->
+    <script src="https://unpkg.com/imask"></script>  <!-- Import phone mask in contact-us form -->
 </body>
 </html>
