Add inputs verifications in Contact us form

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                                         </div> 
                                         <div class="contacts__input-block">
                                             <label for="inp-phone" class="input-label"> Your Phone Number* </label>
-                                            <input id="inp-phone" type="text" name="phone" class="input-field _req" placeholder="+(38)"> <!-- placeholder="+38(000)000-00-00" value="+(380)" -->
+                                            <input id="inp-phone" type="text" name="phone" class="input-field _req"> <!-- placeholder="+38(000)000-00-00" value="+(380)" -->
                                             <p class="input-error"> Provide a phone number</p>
                                         </div> 
                                         <div class="contacts__input-block">
