Send form to e-mail

--- a/contacts.html
+++ b/contacts.html
@@ -98,27 +98,28 @@
                                         <div class="contacts__input-block">
                                             <label for="inp-name" class="input-label"> Your Name* </label>
                                             <input id="inp-name" type="text" name="name" class="input-field _req _name">
-                                            <div class="input-error1"></div>
+                                            <div class="input-error name-error"></div>
                                             <!-- <p class="input-error"> Provide a name</p> -->
                                         </div> 
                                         <div class="contacts__input-block">
                                             <label for="inp-phone" class="input-label"> Your Phone Number* </label>
                                             <input id="inp-phone" type="text" name="phone" class="input-field _req _phone"> <!-- placeholder="+38(000)000-00-00" value="+(380)" -->
                                             <!-- <p class="input-error"> Provide a phone number</p> -->
-                                            <div class="input-error1"></div>
+                                            <div class="input-error phone-error"></div>
                                         </div> 
                                         <div class="contacts__input-block">
                                             <label for="inp-email" class="input-label"> Your Email Address* </label>
                                             <input id="inp-email" type="text" name="email" class="input-field _req _email">
                                             <!-- <p class="input-error" id="email-error"> Provide an e-mail</p> -->
-                                            <div class="input-error1"></div>
+                                            <div class="input-error email-error"></div>
                                         </div> 
                                         <div class="contacts__input-block">
                                             <label for="inp-message" class="input-label"> Your Message* </label>
                                             <textarea id="inp-message" name="message" class="input-field _req" rows="9" style="height: 144px;"></textarea>  
                                             <!-- <p class="input-error"> Provide a message</p>  -->
-                                            <div class="input-error1"></div>                    
+                                            <div class="input-error message-error"></div>                    
                                         </div> 
+                                        <p class="error-hiden">Please, complete all fields</p>
                                         <button type="submit" class="contacts__submit"> Submit </button>
                                         <p class="contacts__cotact-us-PP"> By pressing the submit button you agree with the privacy policy terms </p>
                                     </form>                   
