Fixed small bugs in Contact us form

--- a/contacts.html
+++ b/contacts.html
@@ -96,26 +96,26 @@
                                     <form action="#" id="contacts__form" class="contacts__form">
                                         <p class="contacts__cotact-us-title"> Contact us </p>
                                         <div class="contacts__input-block">
-                                            <label for="inp-name" class="input-label"> Your Name* </label>
-                                            <input id="inp-name" type="text" name="name" class="input-field _req _name">
+                                            <label for="inp-name" class="input-label"> Name* </label>
+                                            <input id="inp-name" type="text" name="name" placeholder="Provide your name" class="input-field _req _name">
                                             <div class="input-error name-error"></div>
                                             <!-- <p class="input-error"> Provide a name</p> -->
                                         </div> 
                                         <div class="contacts__input-block">
-                                            <label for="inp-phone" class="input-label"> Your Phone Number* </label>
-                                            <input id="inp-phone" type="text" name="phone" class="input-field _req _phone"> <!-- placeholder="+38(000)000-00-00" value="+(380)" -->
+                                            <label for="inp-phone" class="input-label"> Phone Number* </label>
+                                            <input id="inp-phone" type="text" name="phone" placeholder="Provide your phone number" class="input-field _req _phone"> <!-- placeholder="+38(000)000-00-00" value="+(380)" -->
                                             <!-- <p class="input-error"> Provide a phone number</p> -->
                                             <div class="input-error phone-error"></div>
                                         </div> 
                                         <div class="contacts__input-block">
-                                            <label for="inp-email" class="input-label"> Your Email Address* </label>
-                                            <input id="inp-email" type="text" name="email" class="input-field _req _email">
+                                            <label for="inp-email" class="input-label"> E-mail Address* </label>
+                                            <input id="inp-email" type="text" name="email" placeholder="Provide your e-mail" class="input-field _req _email">
                                             <!-- <p class="input-error" id="email-error"> Provide an e-mail</p> -->
                                             <div class="input-error email-error"></div>
                                         </div> 
                                         <div class="contacts__input-block">
-                                            <label for="inp-message" class="input-label"> Your Message* </label>
-                                            <textarea id="inp-message" name="message" class="input-field _req" rows="9" style="height: 144px;"></textarea>  
+                                            <label for="inp-message" class="input-label"> Message* </label>
+                                            <textarea id="inp-message" name="message" placeholder="Provide your message" class="input-field _req" rows="9" style="height: 144px;"></textarea>  
                                             <!-- <p class="input-error"> Provide a message</p>  -->
                                             <div class="input-error message-error"></div>                    
                                         </div> 
