Changed projects main pictures and names

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="page__container">
                 <div class="page__nav-bar">
                     <div class="header__logo">
-                        <a data-goto=".page__content" href="#" class="header_logo-pic"><img src="assets/images/projects/00_general/logo_black.svg" class="header_logo-pic" alt="Anna Kyrii"></a>
+                        <a data-goto=".page__content" href="#" class="header_logo-pic"><img src="assets/pic/00_general/logo_black.svg" class="header_logo-pic" alt="Anna Kyrii"></a>
                         <a data-goto=".page__content" href="#" class="header_name"><h1 class="header_name-text"> Anna Kyrii <br> Architectural <br> Projecting Group</h1></a>
                     </div>
 
@@ -77,62 +77,62 @@
                         <div class="project__wrapper">
                             <div class="project__nszu project__content">
                                 <div class="project__img">
-                                    <img src="assets/images/projects/01_nszu/front_2.jpg" class="project__photo-hover">
-                                    <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
+                                    <img src="assets/pic/01_nszu/front-nszu.jpg" class="project__photo-hover">
+                                    <img src="assets/pic/01_nszu/front-nszu-bw.jpg" class="project__photo">
                                 </div>                                
                                 <div class="project__content-wrapper">
-                                    <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo-hiden">
-                                    <p class="project__text"> National Health Service </p>
+                                    <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
+                                    <p class="project__text"> National Health Service of Ukraine </p>
                                 </div>
                             </div>
                             <div class="project__leleka project__content">
                                 <div class="project__img">
-                                    <img src="assets/images/projects/01_nszu/front_2.jpg" class="project__photo-hover">
-                                    <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
+                                    <img src="assets/pic/02_leleka/front-leleka.jpg" class="project__photo-hover">
+                                    <img src="assets/pic/02_leleka/front-leleka-bw.jpg" class="project__photo">
                                 </div>   
                                 <div class="project__content-wrapper">
-                                    <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo-hiden">
-                                    <p class="project__text"> National Health Service </p>
+                                    <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
+                                    <p class="project__text"> Maternityhouse "Leleka"  </p>
                                 </div>
                             </div>
                             <div class="project__aquapark project__content">
                                 <div class="project__img">
-                                    <img src="assets/images/projects/01_nszu/front_2.jpg" class="project__photo-hover">
-                                    <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
+                                    <img src="assets/pic/03_aquapark/front-quapark.jpg" class="project__photo-hover">
+                                    <img src="assets/pic/03_aquapark/front-aquapark-bw.jpg" class="project__photo">
                                 </div>  
                                 <div class="project__content-wrapper">
-                                    <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo-hiden">
-                                    <p class="project__text"> National Health Service </p>
+                                    <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
+                                    <p class="project__text"> Aquapark </p>
                                 </div>
                             </div>
                             <div class="project__brovary project__content">
                                 <div class="project__img">
-                                    <img src="assets/images/projects/01_nszu/front_2.jpg" class="project__photo-hover">
-                                    <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
+                                    <img src="assets/pic/04_school/front-school.jpg" class="project__photo-hover">
+                                    <img src="assets/pic/04_school/front-school-bw.jpg" class="project__photo">
                                 </div>   
                                 <div class="project__content-wrapper">
-                                    <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo-hiden">
-                                    <p class="project__text"> National Health Service </p>
+                                    <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
+                                    <p class="project__text"> Secondary school </p>
                                 </div>
                             </div>
                             <div class="project__nova-kakhovka project__content">
                                 <div class="project__img">
-                                    <img src="assets/images/projects/01_nszu/front_2.jpg" class="project__photo-hover">
-                                    <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
+                                    <img src="assets/pic/05_nova_kakhovka/front-cnap.jpg" class="project__photo-hover">
+                                    <img src="assets/pic/05_nova_kakhovka/front-cnap-bw.jpg" class="project__photo">
                                 </div> 
                                 <div class="project__content-wrapper">
-                                    <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo-hiden">
-                                    <p class="project__text"> National Health Service </p>
+                                    <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
+                                    <p class="project__text"> Center of Administrative Services </p>
                                 </div>
                             </div>
                             <div class="project__zirochka project__content">
                                 <div class="project__img">
-                                    <img src="assets/images/projects/01_nszu/front_2.jpg" class="project__photo-hover">
-                                    <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
+                                    <img src="assets/pic/06_kindergarten_zirochka/front-zirochka.jpg" class="project__photo-hover">
+                                    <img src="assets/pic/06_kindergarten_zirochka/front-zirochka-bw.jpg" class="project__photo">
                                 </div>    
                                 <div class="project__content-wrapper">
-                                    <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo-hiden">
-                                    <p class="project__text"> National Health Service </p>
+                                    <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
+                                    <p class="project__text"> Kindergarten "Zyrochka" </p>
                                 </div>
                             </div>
                         </div>
