Made team photo in 4 columns and add emploees photo

--- a/HTML-snippets/team.html
+++ b/HTML-snippets/team.html
@@ -1,5 +1,52 @@
 <div class="about-us__container"> 
     <div class="emp-block">
+        <img src="assets/pic/00_general/team/AK1.jpg" alt="" class="emp-block__photo">
+        <p class="emp-block__name"> Anna Kyrii </p>
+        <p class="emp-block__position"> CEO </p>
+    </div>
+    <div class="emp-block">
+        <img src="assets/pic/00_general/team/MS1.jpg" alt="" class="emp-block__photo">
+        <p class="emp-block__name"> Maryna Savchuk </p>
+        <p class="emp-block__position"> Deputy Director </p>
+    </div>
+    <div class="emp-block">
+        <img src="assets/pic/00_general/team/AG1.JPG" alt="" class="emp-block__photo">
+        <p class="emp-block__name"> Alina Grigoryan </p>
+        <p class="emp-block__position"> Main Architect </p>
+    </div>
+    <div class="emp-block">
+        <img src="assets/pic/00_general/team/MF1.jpg" alt="" class="emp-block__photo">
+        <p class="emp-block__name"> Maxym Fakas </p>
+        <p class="emp-block__position"> Architect </p>
+    </div>
+    <div class="emp-block">
+        <img src="assets/pic/00_general/team/TK1.jpg" alt="" class="emp-block__photo">
+        <p class="emp-block__name"> Tetiana Kozak </p>
+        <p class="emp-block__position"> Architect </p>
+    </div>
+    <div class="emp-block">
+        <img src="assets/pic/00_general/team/KB1.jpg" alt="" class="emp-block__photo">
+        <p class="emp-block__name"> Kateryna Bondarenko </p>
+        <p class="emp-block__position"> Architect </p>
+    </div>
+    <div class="emp-block">
+        <img src="assets/pic/00_general/team/VS1.jpg" alt="" class="emp-block__photo">
+        <p class="emp-block__name"> Viacheslav Sukhinov </p>
+        <p class="emp-block__position"> Architect </p>
+    </div>
+    <div class="emp-block emp-block-hiden481">
+        <img src="assets/images/projects/00_general/team.jpg" alt="" class="emp-block__photo">
+        <p class="emp-block__name"> Lorem Ipsum </p>
+        <p class="emp-block__position"> Architect </p>
+    </div>
+    <div class="emp-block emp-block-hiden-992-1199">
+        <img src="assets/images/projects/00_general/team.jpg" alt="" class="emp-block__photo">
+        <p class="emp-block__name"> Lorem Ipsum </p>
+        <p class="emp-block__position"> Architect </p>
+    </div>
+</div>
+<!-- <div class="about-us__container"> 
+    <div class="emp-block">
         <img src="assets/images/projects/00_general/front.jpg" alt="" class="emp-block__photo">
         <p class="emp-block__name">Lorem Ipsum</p>
         <p class="emp-block__position">Architect</p>
@@ -29,4 +76,4 @@
         <p class="emp-block__name">Lorem Ipsum</p>
         <p class="emp-block__position">Architect</p>
     </div>
-</div>
+</div> -->
