Started to work with projects filters

--- a/projects.html
+++ b/projects.html
@@ -68,6 +68,24 @@
 
         <section class="page__content">
             <div class="page__container">
+
+                <div class="page__filter">
+                    <div class="section-wrapper">
+                        <nav>
+                            <ul>
+                                <li> All </li>
+                                <li> Education </li>
+                                <li> Offices </li>
+                                <li> Residential </li>
+                                <li> Resort </li>
+                                <li> Interior </li>
+                                <li> Urban </li>
+                                <li> Healthcare</li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+
                 <div class="page__projects">
                     <div class="section-wrapper" id="project__wrapper">
                         <div class="project__wrapper">
